--- a/templates/home.html
+++ b/templates/home.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1> Home Page</h1>
+    <a href="order_summary/">Order summary</a>
     {% block content %}
         <h1>Item List</h1>
         {% for item in items %}
